/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package magma.mconfig;
option go_package = "magma/devmand/cloud/go/protos/mconfig";

message DevmandGatewayConfig {
  map<string, ManagedDevice> managed_devices = 1;
}

message ManagedDevice {
  // Use any.Any when we are ready. for now use JSON string
  // google.protobuf.Any device_config = 1;
  string device_config = 1;
  string host = 2;
  repeated string device_type = 3;
  string platform = 4;
  Channels channels = 5;
}

message Channels {
  SNMPChannel snmp_channel = 1;
  FrinxChannel frinx_channel = 2;
  CambiumChannel cambium_channel = 3;
  OtherChannel other_channel = 4;
}

message SNMPChannel {
  string version = 1;
  string community = 2;
}

message FrinxChannel {
  int32 frinx_port = 1;
  string authorization = 2;
  string host = 3;
  int32 port = 4;
  string transport_type = 5;
  string device_type = 6;
  string device_version = 7;
  string username = 8;
  string password = 9;
}

message CambiumChannel {
  string client_id = 1;
  string client_secret = 2;
  string client_mac = 3;
  string client_ip = 4;
}

message OtherChannel {
  map<string, string> channel_props = 1;
}
